# MT-RAG

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
configs/: experiment.toml
notebooks/: mt-rag-indexing.ipynb  mt_rag_bge_m3_indexing_colab.ipynb
runs/main/: events.jsonl  experiment.toml  manifest.json  run-definition.json
scripts/: check_services.py  diagnose_env.py  evaluate_generation.py  evaluate_retrieval.py  import_legacy_run.py  restore_bge_indices.py  run_experiment.py  setup_elasticsearch.py  smoke_bge.py  smoke_ollama.py  smoke_prompts.py  smoke_reranker.py  smoke_search.py
src/mtrag/: __init__.py  config.py  interfaces.py  schemas.py
src/mtrag/data/: jsonl.py  (+2 more)
tests/unit/: test_benchmark.py  test_bge_encoder.py  test_cache.py  test_evaluation_compare.py  test_evaluation_qrels.py  test_evaluation_retrieval.py  test_evaluation_writer.py  test_experiment_artifacts.py  test_experiment_bge_flow.py  test_experiment_definition.py  test_experiment_fingerprint.py  test_experiment_planning.py  test_experiment_preflight.py  test_experiment_query_stages.py  test_experiment_reporting.py  test_experiment_spec.py  test_experiment_stages.py  test_generation_evaluation.py  test_generation_stages.py  test_history_agent.py  test_import_legacy_run.py  test_jsonl.py  test_llm_services.py  test_prompts.py  test_rerank_service.py  test_retrieval_adapters.py  test_rrf.py  test_run_experiment_cli.py  test_runtime_scheduler.py  test_runtime_state.py  test_runtime_thermal.py  test_schemas.py  test_setup_elasticsearch.py
(+127 files in other folders)
