[project]
name = "mt-rag"
version = "0.1.0"
description = "Local multi-turn RAG pipeline"
requires-python = ">=3.12,<3.14"
dependencies = [
    "elasticsearch>=9,<10",
    "python-dotenv>=1.1,<2",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
ml = [
    "FlagEmbedding==1.4.0",
    "numpy>=1.26,<3",
    "torch==2.12.1",
    # FlagEmbedding 1.4 still calls tokenizer APIs removed in Transformers 5.
    "transformers>=4.44.2,<5",
]
evaluation = [
    "bert-score>=0.3.13,<0.4",
    "beautifulsoup4>=4.13,<5",
    "lxml>=5,<7",
    "pandas>=2.2,<4",
    "pytrec-eval-terrier==0.5.10",
    "PyYAML>=6,<7",
    "rouge-score>=0.1.2,<0.2",
    "tqdm>=4.66,<5",
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu132" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtrag"]
